Fixed handling of text-overflow in the course overview description

--- a/src/app/modules/course/course-overview/course-overview.component.scss
+++ b/src/app/modules/course/course-overview/course-overview.component.scss
@@ -40,6 +40,8 @@
 
 .course-description-card {
   margin: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 h3 {
